Copy back in RoutingStrategyAutoConfiguration
Copy back in RoutingStrategyAutoConfiguration, as 4.0 does not contain
that any more

--- a/springcloud-spring-boot-autoconfigure/pom.xml
+++ b/springcloud-spring-boot-autoconfigure/pom.xml
@@ -44,6 +44,13 @@
 
         <dependency>
             <groupId>org.axonframework</groupId>
+            <artifactId>axon-messaging</artifactId>
+            <version>${axon.version}</version>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.axonframework</groupId>
             <artifactId>axon-spring-boot-autoconfigure</artifactId>
             <version>${axon.version}</version>
             <optional>true</optional>
