--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,8 @@
         <spring.version>5.1.4.RELEASE</spring.version>
         <spring.boot.version>2.1.2.RELEASE</spring.boot.version>
         <spring-cloud.version>2.0.1.RELEASE</spring-cloud.version>
+        <spring-messaging.version>5.1.6.RELEASE</spring-messaging.version>
+        <spring-integration.version>5.1.4.RELEASE</spring-integration.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <mockito.version>2.15.0</mockito.version>
         <jackson.version>2.9.8</jackson.version>
