--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <axon.version>4.2</axon.version>
+        <axon.version>4.3-SNAPSHOT</axon.version>
         <spring-cloud.version>2.0.1.RELEASE</spring-cloud.version>
 
         <spring.version>5.1.4.RELEASE</spring.version>
