--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ cache:
 
 script:
   - mvn -version
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent verify sonar:sonar -B -Dsonar.projectKey=AxonFramework_extension-springcloud
+  - mvn -B -Pcoverage clean verify sonar:sonar -Dsonar.projectKey=AxonFramework_extension-springcloud
   - JAVA_HOME=$(dirname ${JAVA_HOME})/openjdk11 mvn -version
   - JAVA_HOME=$(dirname ${JAVA_HOME})/openjdk11 mvn clean verify -B
 
