--- a/springcloud-spring-boot-autoconfigure/pom.xml
+++ b/springcloud-spring-boot-autoconfigure/pom.xml
@@ -82,6 +82,14 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- Required to override dependency in org.springframework.boot:spring-boot-starter:jar:2.3.5.RELEASE -->
+        <!-- The spring-boot-starter includes spring-core version 5.2.x, which causes NoClassDefFoundError -->
+        <!-- This override should be removed as soon as spring-boot-starter uses the latest spring-core version -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
