--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,9 +12,9 @@ jobs:
       matrix:
         include:
           - java-version: 8
-            mvn-parameters: "clean verify"
+            sonar: false
           - java-version: 11
-            mvn-parameters: "-Pcoverage clean verify sonar:sonar -Dsonar.projectKey=AxonFramework_extension-springcloud -Dsonar.organization=axonframework -Dsonar.login=${{ secrets.SONAR_TOKEN }}"
+            sonar: true
 
     steps:
       - name: Checkout code
@@ -34,8 +34,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven
 
-      - name: Maven operation
-        run: mvn -B -U ${{ matrix.mvn-parameters }}
+      - name: Maven operation with Sonar
+        if: ${{ matrix.sonar }} == 'false'
+        run: |
+          mvn -B -U -Pcoverage clean verify sonar:sonar -Dsonar.projectKey=AxonFramework_extension-springcloud -Dsonar.organization=axonframework -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Maven operation without Sonar
+        if: ${{ matrix.sonar }} == 'true'
+        run: |
+          mvn -B -U clean verify
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
