--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,9 +12,9 @@ jobs:
       matrix:
         include:
           - java-version: 8
-            sonar: false
+            sonar-enabled: false
           - java-version: 11
-            sonar: true
+            sonar-enabled: true
 
     steps:
       - name: Checkout code
@@ -35,14 +35,14 @@ jobs:
             ${{ runner.os }}-maven
 
       - name: Maven operation with Sonar
-        if: ${{ matrix.sonar }} == 'true'
+        if: ${{ matrix.sonar-enabled }}
         run: |
-          mvn -B -U -Pcoverage clean verify sonar:sonar -Dsonar.projectKey=AxonFramework_extension-springcloud -Dsonar.organization=axonframework -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+          mvn -B -U -Pcoverage clean verify sonar:sonar -Dsonar.projectKey=AxonFramework_extension-springcloud -Dsonar.organization=axonframework -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Maven operation without Sonar
-        if: ${{ matrix.sonar }} == 'false'
+        if: !${{ matrix.sonar-enabled }}
         run: |
           mvn -B -U clean verify
         env:
