--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,14 +39,14 @@ jobs:
             ${{ runner.os }}-maven
 
       - name: Maven operation with Sonar
-        if: ${{ matrix.sonar-enabled }} == 1
+        if: matrix.sonar-enabled == 1
         run: |
           mvn -B -U -Pcoverage clean verify sonar:sonar -Dsonar.projectKey=AxonFramework_extension-springcloud -Dsonar.organization=axonframework -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Maven operation without Sonar
-        if: ${{ matrix.sonar-enabled }} == 0
+        if: matrix.sonar-enabled == 0
         run: |
           mvn -B -U clean verify
         env:
