--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         <spring-cloud-release.version>Hoxton.SR10</spring-cloud-release.version>
 
         <spring.version>5.3.3</spring.version>
-        <spring.boot.version>2.4.2</spring.boot.version>
+        <spring.boot.version>2.3.8.RELEASE</spring.boot.version>
 
         <slf4j.version>1.7.30</slf4j.version>
         <log4j.version>2.14.0</log4j.version>
