--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,10 +44,15 @@ jobs:
         run: |
           ./mvnw -B -U clean verify
 
+      - name: Build with Coverage reports
+        if: matrix.sonar-enabled
+        run: |
+          ./mvnw -B -U -Dcoverage clean verify
+
       - name: Sonar Analysis
         if: matrix.sonar-enabled
         run: |
-          ./mvnw -B -Pcoverage sonar:sonar \
+          ./mvnw -B sonar:sonar \
           -Dsonar.projectKey=AxonFramework_extension-springcloud \
           -Dsonar.organization=axonframework \
           -Dsonar.host.url=https://sonarcloud.io \
