Adjust coverage run approach for the pull request task
Adjust coverage run approach for the pull request task

#6

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,7 @@ jobs:
             ${{ runner.os }}-maven
 
       - name: Regular Build
+        if: ${{ !matrix.sonar-enabled }}
         run: |
           ./mvnw -B -U clean verify
 
