--- a/springcloud-spring-boot-autoconfigure/pom.xml
+++ b/springcloud-spring-boot-autoconfigure/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2010-2020. Axon Framework
+  ~ Copyright (c) 2010-2022. Axon Framework
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.axonframework.extensions.springcloud</groupId>
         <artifactId>axon-springcloud-parent</artifactId>
-        <version>4.5</version>
+        <version>4.5.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>axon-springcloud-spring-boot-autoconfigure</artifactId>
