--- a/springcloud-spring-boot-starter/pom.xml
+++ b/springcloud-spring-boot-starter/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2010-2021. Axon Framework
+  ~ Copyright (c) 2010-2022. Axon Framework
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -26,7 +26,7 @@
 
     <groupId>org.axonframework.extensions.springcloud</groupId>
     <artifactId>axon-springcloud-spring-boot-starter</artifactId>
-    <version>4.5</version>
+    <version>4.5.1-SNAPSHOT</version>
 
     <name>Axon Framework Spring Cloud Extension - Spring Boot Starter</name>
     <description>Spring Boot Starter module for the Spring Cloud Extension of Axon Framework</description>
