--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,8 +12,11 @@ updates:
     - "Status: In Progress"
   # Add reviewers
   reviewers:
+    - "gklijs"
+    - "Morlack"
     - "sandjelkovic"
-    - "smcvb"
+    - "smcvb" # Main
+    - "YvonneCeelie"
   milestone: 8
 - package-ecosystem: maven
   directory: "/"
@@ -27,6 +30,9 @@ updates:
     - "Status: In Progress"
   # Add reviewers
   reviewers:
+    - "gklijs"
+    - "Morlack"
     - "sandjelkovic"
-    - "smcvb"
+    - "smcvb" # Main
+    - "YvonneCeelie"
   milestone: 8
