--- a/springcloud/pom.xml
+++ b/springcloud/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.axonframework.extensions.springcloud</groupId>
         <artifactId>axon-springcloud-parent</artifactId>
-        <version>4.7.0</version>
+        <version>4.7.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>axon-springcloud</artifactId>
