[maven-release-plugin] prepare for next development iteration

--- a/springcloud-spring-boot-autoconfigure/pom.xml
+++ b/springcloud-spring-boot-autoconfigure/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.axonframework.extensions.springcloud</groupId>
         <artifactId>axon-springcloud-parent</artifactId>
-        <version>4.11.0</version>
+        <version>4.11.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>axon-springcloud-spring-boot-autoconfigure</artifactId>
