Replace Gerard for Mateusz
Replace Gerard for Mateusz

--- a/pom.xml
+++ b/pom.xml
@@ -515,8 +515,8 @@
             </roles>
         </developer>
         <developer>
-            <name>Gerard Klijs</name>
-            <email>gerard.klijs@axoniq.io</email>
+            <name>Mitchell Herrijgers</name>
+            <email>mitchell.herrijgers@axoniq.io</email>
             <organization>AxonIQ</organization>
             <organizationUrl>https://axoniq.io</organizationUrl>
             <roles>
@@ -524,8 +524,8 @@
             </roles>
         </developer>
         <developer>
-            <name>Mitchell Herrijgers</name>
-            <email>mitchell.herrijgers@axoniq.io</email>
+            <name>Mateusz Nowak</name>
+            <email>mateusz.nowak@axoniq.io</email>
             <organization>AxonIQ</organization>
             <organizationUrl>https://axoniq.io</organizationUrl>
             <roles>
